# nb_mypy

./: .gitignore  LICENSE  Nb-Mypy.ipynb  Nb_Mypy.ipynb  README.md  README.txt  nb-mypy.py  pyproject.toml  setup.cfg  setup.py  typecheck.py
nb_mypy/: __init__.py
