[metadata]
name = nb_mypy
author = Lars van den Haak, Tom Verhoeff
author_email = l.b.vandenhaak@gmail.com
license = MIT
description = Nb Mypy is a facility to automatically run mypy on Jupyter notebook cells as they are executed, whilst retaining information about the execution history.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.tue.nl/jupyter-projects/nb_mypy
project_urls =
    Bug Tracker = https://gitlab.tue.nl/jupyter-projects/nb_mypy/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: IPython
[options]
packages = find:
python_requires = >=3.6
install_requires =
  astor >= 0.8, <1
  mypy >= 0.7, <1
  ipython >= 7.0, <8